using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant : MonoBehaviour
{
    public const string Anim_FastRun = "FastRun";
    public const string Anim_SlowRun = "SlowRun";
    public const string Anim_Jump = "Jump";
    public const string Anim_Die = "Die";
    public const string Tag_Ground = "Ground";
    public const string Tag_Obstacle = "Obstacle";
    public const string Tag_Coin = "Coin";
}
